# NeuroNet

./: .gitignore  006_company_policies.sql  ARCHITECTURE.md  DATA-ACCESS-POLICY.md  TODO.md  bootstrap-vault.sh  bootstrap.sh  rootkey  test_pipeline.py
agents/worker-claude/: Dockerfile  README.md  service.py  service.py.old
connectors/email/: Dockerfile  service.py
connectors/entraid/: SETUP.md  service.py
connectors/intraid/: Dockerfile  service.py
connectors/meraki/: Dockerfile  meraki_rbac.sql  service.py
connectors/powershell/: Dockerfile  POWERSHELL-DESIGN.md  service.py
connectors/slack/: Dockerfile  SETUP.md  service.py
connectors/wazuh/: Dockerfile  service.py
connectors/zendesk/: Dockerfile  service.py
deploy/: .env.example  docker-compose.yml  patch_wazuh_severity.py  rootkey  vault-unseal.sh  zendesk_rbac.sql
migrations/: 004_user_memory.sql  005_asset_inventory.sql
services/resolver/: Dockerfile  README.md  service.py  service.py.old
services/scheduler/: Dockerfile  schema.sql  service.py
services/vault/: .gitignore  README.md  knowledge-schema.sql
services/vault-audit/: Dockerfile  schema.sql  service.py
services/vault/db/: 000_users.sh  001_schema.sql
services/vault/vault-iam/: Dockerfile  pyproject.toml
services/vault/vault-iam/vault_iam/: app.py  database.py  entra_sync.py  entra_sync.py.old
services/vault/vault-iam/vault_iam/routes/: admin.py  auth.py  health.py  identity.py  rbac.py
